using Google's libphonenumbers format and valid phone number , remove phone number regex.